crates/ruff_python_parser/tests/snapshots/valid_syntax@pep701_f_string_py311.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/pep701_f_string_py311.py
---
## AST

```
Module(
    ModModule {
        range: 0..107,
        body: [
            Expr(
                StmtExpr {
                    range: 44..72,
                    value: FString(
                        ExprFString {
                            range: 44..72,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 44..72,
                                            elements: [
                                                Literal(
                                                    FStringLiteralElement {
                                                        range: 46..52,
                                                        value: "outer ",
                                                    },
                                                ),
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 52..71,
                                                        expression: StringLiteral(
                                                            ExprStringLiteral {
                                                                range: 53..70,
                                                                value: StringLiteralValue {
                                                                    inner: Single(
                                                                        StringLiteral {
                                                                            range: 53..70,
                                                                            value: "# not a comment",
                                                                            flags: StringLiteralFlags {
                                                                                quote_style: Single,
                                                                                prefix: Empty,
                                                                                triple_quoted: false,
                                                                            },
                                                                        },
                                                                    ),
                                                                },
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: None,
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Double,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 73..106,
                    value: FString(
                        ExprFString {
                            range: 73..106,
                            value: FStringValue {
                                inner: Single(
                                    FString(
                                        FString {
                                            range: 73..106,
                                            elements: [
                                                Literal(
                                                    FStringLiteralElement {
                                                        range: 75..81,
                                                        value: "outer ",
                                                    },
                                                ),
                                                Expression(
                                                    FStringExpressionElement {
                                                        range: 81..105,
                                                        expression: Name(
                                                            ExprName {
                                                                range: 82..83,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        debug_text: None,
                                                        conversion: None,
                                                        format_spec: Some(
                                                            FStringFormatSpec {
                                                                range: 84..104,
                                                                elements: [
                                                                    Expression(
                                                                        FStringExpressionElement {
                                                                            range: 84..103,
                                                                            expression: StringLiteral(
                                                                                ExprStringLiteral {
                                                                                    range: 85..102,
                                                                                    value: StringLiteralValue {
                                                                                        inner: Single(
                                                                                            StringLiteral {
                                                                                                range: 85..102,
                                                                                                value: "# not a comment",
                                                                                                flags: StringLiteralFlags {
                                                                                                    quote_style: Double,
                                                                                                    prefix: Empty,
                                                                                                    triple_quoted: false,
                                                                                                },
                                                                                            },
                                                                                        ),
                                                                                    },
                                                                                },
                                                                            ),
                                                                            debug_text: None,
                                                                            conversion: None,
                                                                            format_spec: None,
                                                                        },
                                                                    ),
                                                                    Literal(
                                                                        FStringLiteralElement {
                                                                            range: 103..104,
                                                                            value: " ",
                                                                        },
                                                                    ),
                                                                ],
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ],
                                            flags: FStringFlags {
                                                quote_style: Single,
                                                prefix: Regular,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                    ),
                },
            ),
        ],
    },
)
```
